--- a/cmake/arrow/CMakeLists.txt
+++ b/cmake/arrow/CMakeLists.txt
@@ -86,9 +86,9 @@ set_source_files_properties(Message_generated.h PROPERTIES GENERATED TRUE)
 set_source_files_properties(feather_generated.h PROPERTIES GENERATED TRUE)
 set_source_files_properties(File_generated.h PROPERTIES GENERATED TRUE)
 
-set(FBS_OUTPUT_FILES "src/arrow/ipc/File_generated.h"
-                     "src/arrow/ipc/Message_generated.h"
-                     "src/arrow/ipc/feather_generated.h")
+set(FBS_OUTPUT_FILES "../arrow-src/cpp/src/arrow/ipc/File_generated.h"
+                     "../arrow-src/cpp/src/arrow/ipc/Message_generated.h"
+                     "../arrow-src/cpp/src/arrow/ipc/feather_generated.h")
 
 set(FBS_SRC
     ../format/Message.fbs
@@ -116,14 +116,15 @@ target_link_libraries(arrow
     ${BOOST_SYSTEM_LIBRARY}
     ${ARROW_TEST_LINK_TOOLCHAIN})
 
-add_custom_target(arrow_fb_files
-                  # COMMAND node $<TARGET_FILE:flatc>
-                  COMMAND /usr/local/bin/flatc
+add_custom_command(OUTPUT ${FBS_OUTPUT_FILES}
+                   COMMAND ${FLATBUFFERS_COMPILER}
                            -c
                            -o
                            ../arrow-src/cpp/src/arrow/ipc/
                            ${ABS_FBS_SRC}
+                   DEPENDS ${FLATBUFFERS_COMPILER}
                    COMMENT "Running flatc compiler on ${ABS_FBS_SRC}"
                    VERBATIM)
-# add_dependencies(arrow_fb_files flatc)
+
+add_custom_target(arrow_fb_files DEPENDS ${FBS_OUTPUT_FILES})
 add_dependencies(arrow arrow_fb_files)
