Add umd build for `perspective-phosphor` and other build fixes

--- a/packages/perspective-phosphor/config/tsconfig.json
+++ b/packages/perspective-phosphor/config/tsconfig.json
@@ -11,6 +11,7 @@
         "outDir": "dist/esm",
         "sourceMap": true,
         "inlineSourceMap": false,
+        "inlineSources": true,
         "rootDir": "../src/ts",
         "lib": [
             "es2016",
