--- a/packages/perspective-phosphor/package.json
+++ b/packages/perspective-phosphor/package.json
@@ -17,10 +17,11 @@
         "bench": "npm-run-all bench:build bench:run",
         "bench:build": "echo \"No Benchmarks\"",
         "bench:run": "echo \"No Benchmarks\"",
-        "build": "npm-run-all build:esm build:cjs build:styles",
+        "build": "npm-run-all build:esm build:cjs build:styles build:umd",
         "build:esm": "tsc --p ./config --outDir dist/esm",
         "build:cjs": "webpack --color --config config/webpack.config.js",
         "build:styles": "webpack --color --config config/webpack.theme.config.js",
+        "build:umd": "webpack --color --config config/webpack.umd.config.js",
         "clean": "rimraf dist",
         "test": "jest --silent --color 2>&1"
     },
